--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="bg">
-      <div class="screen">0</div>
+      <div class="screen"></div>
       <button class="button">C</button>
       <button class="button">%</button>
       <button class="button">/</button>
@@ -28,5 +28,6 @@
       <button class="button lbutton">0</button>
       <button class="button lbutton">=</button>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
